[package]
name = "hpd"
version = "0.1.0"
authors = ["Atul Varma <varmaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive", "rc"]  }
petgraph = "0.6"
clap = "2.33.3"
chrono = "0.4"
serde_json = "1.0.59"
